--- a/taula.html
+++ b/taula.html
@@ -33,25 +33,25 @@
 		  <td class="zenbakia">1</td>
 		  <td class="izena">Sergio Fernandez</td>
 		  <td class="emaitza beltza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza beltza"></td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">1</td>
 		  <td class="emaitza">0</td>
-		  <td class="puntuak">0</td>
+		  <td class="emaitza">1</td>
+		  <td class="emaitza">0</td>
+		  <td class="puntuak">5</td>
 		  <td></td>
 		</tr>
 		<tr>
 		  <td class="zenbakia">2</td>
 		  <td class="izena">Tomas Conde</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">1</td>
 		  <td class="puntuak">7</td>
@@ -88,7 +88,7 @@
 		<tr>
 		  <td class="zenbakia">5</td>
 		  <td class="izena">Edu Alonso</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">1</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza beltza"></td>
@@ -96,35 +96,35 @@
 		  <td class="emaitza">1</td>
 		  <td class="emaitza">1</td>
 		  <td class="emaitza">0</td>
-		  <td class="puntuak">2</td>
+		  <td class="puntuak">3</td>
 		  <td></td>
 		</tr>
 		<tr>
 		  <td class="zenbakia">6</td>
 		  <td class="izena">Aitor Elustondo</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">1</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">0</td>
-		  <td class="emaitza"></td>
-		  <td class="puntuak">1</td>
+		  <td class="emaitza">1</td>
+		  <td class="puntuak">8</td>
 		  <td></td>
 		</tr>
 		<tr>
 		  <td class="zenbakia">7</td>
 		  <td class="izena">Vicente Santos</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">1</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">1</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
-		  <td class="emaitza"></td>
-		  <td class="puntuak">4</td>
+		  <td class="emaitza">0</td>
+		  <td class="puntuak">5</td>
 		  <td></td>
 		</tr>
 		<tr>
@@ -135,10 +135,10 @@
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">1</td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
-		  <td class="puntuak">7</td>
+		  <td class="puntuak">11</td>
 		  <td></td>
 		</tr>
 	  </table>
@@ -165,11 +165,11 @@
 		  <td class="emaitza">0</td>
 		  <td class="emaitza">1</td>
 		  <td class="emaitza">1</td>
-		  <td class="emaitza"></td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
 		  <td class="emaitza">3</td>
-		  <td class="puntuak">8</td>
+		  <td class="emaitza">0</td>
+		  <td class="emaitza">3</td>
+		  <td class="puntuak">11</td>
 		  <td></td>
 		</tr>
 		<tr>
@@ -178,12 +178,12 @@
 		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">0</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza">1</td>
 		  <td class="emaitza">3</td>
-		  <td class="puntuak">7</td>
+		  <td class="puntuak">13</td>
 		  <td></td>
 		</tr>
 		<tr>
@@ -193,36 +193,36 @@
 		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
-		  <td class="puntuak">13</td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">0</td>
+		  <td class="puntuak">16</td>
 		  <td></td>
 		</tr>
 		<tr>
 		  <td class="zenbakia">4</td>
 		  <td class="izena">Gaizka Alberdi</td>
 		  <td class="emaitza">1</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
-		  <td class="emaitza"></td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza">0</td>
-		  <td class="puntuak">4</td>
+		  <td class="puntuak">10</td>
 		  <td></td>
 		</tr>
 		<tr>
 		  <td class="zenbakia">5</td>
 		  <td class="izena">Xabier Prado</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
+		  <td class="emaitza">0</td>
+		  <td class="emaitza">0</td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza">0</td>
 		  <td class="puntuak">0</td>
@@ -232,20 +232,20 @@
 		  <td class="zenbakia">6</td>
 		  <td class="izena">Julen Agirre</td>
 		  <td class="emaitza">0</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza">0</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">0</td>
-		  <td class="puntuak">3</td>
+		  <td class="puntuak">9</td>
 		  <td></td>
 		</tr>
 		<tr>
 		  <td class="zenbakia">7</td>
 		  <td class="izena">Jon Gurrutxaga</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza">1</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza">0</td>
@@ -253,7 +253,7 @@
 		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
-		  <td class="puntuak">7</td>
+		  <td class="puntuak">10</td>
 		  <td></td>
 		</tr>
 		<tr>
@@ -261,13 +261,13 @@
 		  <td class="izena">Juan Carlos Valor</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza">0</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
-		  <td class="puntuak">9</td>
+		  <td class="puntuak">12</td>
 		  <td></td>
 		</tr>
 	  </table>
