--- a/berriak.html
+++ b/berriak.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="itxurak/nagusia.css">
   </head>
   <body>
-    <header id="burua">
+    <header class="burua">
       <h1>Zubi-Ondo kirol elkartea</h1>
       <h2>Berriak</h2>
-      <nav id="menua">
+      <nav class="menua">
         <a href="index.html">Home</a>
         <a href="artikuloak.html">Artikuloak</a>
         <a href="bukaerak.html">Bukaerak</a>
@@ -20,8 +20,9 @@
     </header>
     <main class="nagusia">
       <section>
-        <h2>VI. Mekatar Group Iriondo Xake Txapelketa 2017-2018</h2>
-        <a href="taula.html">Lehenengo fasea</a>
+        <h3>VI. Mekatar Group Iriondo Xake Txapelketa 2017-2018</h3>
+        <p><a href="taula2.html">Bigarrengo fasea</a></p>
+        <p><a href="taula.html">Lehenengo fasea</a></p>
       </section>
     </main>
   </body>
