--- a/bukaerak.html
+++ b/bukaerak.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="itxurak/nagusia.css">
   </head>
   <body>
-    <header id="burua">
+    <header class="burua">
       <h1>Zubi-Ondo kirol elkartea</h1>
       <h2>Bukaerak</h2>
-      <nav id="menua">
+      <nav class="menua">
         <a href="index.html">Home</a>
         <a href="berriak.html">Berriak</a>
         <a href="artikuloak.html">Artikuloak</a>
