--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="itxurak/nagusia.css">
   </head>
   <body>
-    <header id="burua">
+    <header class="burua">
       <h1>Zubi-Ondo Kirol Elkartea</h1>
       <h2>Sarrera</h2>
-      <nav id="menua">
+      <nav class="menua">
         <a href="berriak.html">Berriak</a>
         <a href="artikuloak.html">Artikuloak</a>
         <a href="bukaerak.html">Bukaerak</a>
@@ -20,15 +20,11 @@
     </header>
     <main id="nagusia">
       <section>
-        <h2>información</h2>
+        <h3>Informazioa</h3>
         <p>Zubi-Ondo Kirol Elkartearen web <strong>ez ofiziala</strong>.</p>
         <p>Página web <strong>no oficial</strong> de la Agrupación Deportiva Zubi-Ondo.</p>
-        <p>Si quieres publicar algun artículo en la web o ves alguna cosa que hay que corregir o modificar,
-        enviame un correo electronico a
+        <p>Esta página web está abierta a las colaboraciones de todos los aficionados al ajedrez. Si quieres publicar algún artículo en la web o ves alguna cosa que hay que corregir o modificar, envíame un correo electrónico a
         <a href="mailto:zubiondokirolelkartea@gmail.com">zubiondokirolelkartea@gmail.com</a></p>
-        <p><a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px"
-        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-        alt="Valid CSS!" /></a></p>
       </section>
       <aside class="lagunak">
           <h3>Laguntzaileak</h3>
