--- a/taula2.html
+++ b/taula2.html
@@ -28,7 +28,7 @@
 		</tr>
 		<tr>
 		  <td class="zenbakia">1</td>
-		  <td class="izena">Sergio Fernandez</td>
+		  <td class="izena">A1 Ivan Fernandez</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
@@ -40,7 +40,7 @@
 		</tr>
 		<tr>
 		  <td class="zenbakia">2</td>
-		  <td class="izena">Tomas Conde</td>
+		  <td class="izena">B1 Aitor Gallategi</td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza"></td>
@@ -52,7 +52,7 @@
 		</tr>
 		<tr>
 		  <td class="zenbakia">3</td>
-		  <td class="izena">Atsedena</td>
+		  <td class="izena">C1 Felix Manso</td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza beltza"></td>
@@ -64,7 +64,7 @@
 		</tr>
 		<tr>
 		  <td class="zenbakia">4</td>
-		  <td class="izena">Atsedena</td>
+		  <td class="izena">D2 Anibal Fernandez</td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
@@ -76,7 +76,7 @@
 		</tr>
 		<tr>
 		  <td class="zenbakia">5</td>
-		  <td class="izena">Edu Alonso</td>
+		  <td class="izena">E2 Javier Muñoz</td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
@@ -88,7 +88,7 @@
 		</tr>
 		<tr>
 		  <td class="zenbakia">6</td>
-		  <td class="izena">Aitor Elustondo</td>
+		  <td class="izena">F2 Juan Manuel Navarro</td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
@@ -115,7 +115,7 @@
 		</tr>
 		<tr>
 		  <td class="zenbakia">1</td>
-		  <td class="izena">Sergio Fernandez</td>
+		  <td class="izena">D1 Markel Kerexeta</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
@@ -127,7 +127,7 @@
 		</tr>
 		<tr>
 		  <td class="zenbakia">2</td>
-		  <td class="izena">Tomas Conde</td>
+		  <td class="izena">E1 Juanjo Gomez</td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza"></td>
@@ -139,7 +139,7 @@
 		</tr>
 		<tr>
 		  <td class="zenbakia">3</td>
-		  <td class="izena">Atsedena</td>
+		  <td class="izena">F1 Jon Esnaola</td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza beltza"></td>
@@ -151,7 +151,7 @@
 		</tr>
 		<tr>
 		  <td class="zenbakia">4</td>
-		  <td class="izena">Atsedena</td>
+		  <td class="izena">A2 Aitor Elustondo</td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
@@ -163,7 +163,7 @@
 		</tr>
 		<tr>
 		  <td class="zenbakia">5</td>
-		  <td class="izena">Edu Alonso</td>
+		  <td class="izena">B2 Iker Ruiz</td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
@@ -175,7 +175,7 @@
 		</tr>
 		<tr>
 		  <td class="zenbakia">6</td>
-		  <td class="izena">Aitor Elustondo</td>
+		  <td class="izena">C2 El Mehdi</td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
 		  <td class="emaitza"></td>
@@ -186,6 +186,354 @@
 		  <td></td>
 		</tr>
 	  </table>
+
+    <table>
+   <tr>
+     <td class="zenbakia"></td>
+     <td class="izena">K1 MULTZOA - GRUPO K1</td>
+     <td class="emaitza">1</td>
+     <td class="emaitza">2</td>
+     <td class="emaitza">3</td>
+     <td class="emaitza">4</td>
+     <td class="emaitza">5</td>
+     <td class="emaitza">6</td>
+     <td class="puntuak">Puntuak</td>
+     <td class="sailkapena">Sailkapena</td>
+   </tr>
+   <tr>
+     <td class="zenbakia">1</td>
+     <td class="izena">A3 Tomas Comde</td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">2</td>
+     <td class="izena">E3 Patxi Agea</td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">3</td>
+     <td class="izena">C4 Jose Ramon Oyarzabal</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">4</td>
+     <td class="izena">A5</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">5</td>
+     <td class="izena">E5 Hodei Kerexeta</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">6</td>
+     <td class="izena">C6</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   </table>
+
+   <table>
+   <tr>
+     <td class="zenbakia"></td>
+     <td class="izena">K2 MULTZOA - GRUPO K2</td>
+     <td class="emaitza">1</td>
+     <td class="emaitza">2</td>
+     <td class="emaitza">3</td>
+     <td class="emaitza">4</td>
+     <td class="emaitza">5</td>
+     <td class="emaitza">6</td>
+     <td class="puntuak">Puntuak</td>
+     <td class="sailkapena">Sailkapena</td>
+   </tr>
+   <tr>
+     <td class="zenbakia">1</td>
+     <td class="izena">B3 Juan Carlos Valor</td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">2</td>
+     <td class="izena">F3 Jose Garcia</td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">3</td>
+     <td class="izena">D4 Oscar Diez</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">4</td>
+     <td class="izena">B5 Jon Gurrutxaga</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">5</td>
+     <td class="izena">F5 Jesus Iriondo</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">6</td>
+     <td class="izena">D6 Iñaki Buruntza</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   </table>
+
+   <table>
+   <tr>
+     <td class="zenbakia"></td>
+     <td class="izena">K3 MULTZOA - GRUPO K3</td>
+     <td class="emaitza">1</td>
+     <td class="emaitza">2</td>
+     <td class="emaitza">3</td>
+     <td class="emaitza">4</td>
+     <td class="emaitza">5</td>
+     <td class="emaitza">6</td>
+     <td class="puntuak">Puntuak</td>
+     <td class="sailkapena">Sailkapena</td>
+   </tr>
+   <tr>
+     <td class="zenbakia">1</td>
+     <td class="izena">C3 Roberto Keexeta</td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">2</td>
+     <td class="izena">A4</td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">3</td>
+     <td class="izena">E4 Julen Uranga</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">4</td>
+     <td class="izena">C5 Rafa Alvarez</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">5</td>
+     <td class="izena">A6 Edu Alonso</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">6</td>
+     <td class="izena">E6 Gorka Uranga</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   </table>
+
+   <table>
+   <tr>
+     <td class="zenbakia"></td>
+     <td class="izena">K4 MULTZOA - GRUPO K4</td>
+     <td class="emaitza">1</td>
+     <td class="emaitza">2</td>
+     <td class="emaitza">3</td>
+     <td class="emaitza">4</td>
+     <td class="emaitza">5</td>
+     <td class="emaitza">6</td>
+     <td class="puntuak">Puntuak</td>
+     <td class="sailkapena">Sailkapena</td>
+   </tr>
+   <tr>
+     <td class="zenbakia">1</td>
+     <td class="izena">D3 Ignacio Vazquez</td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">2</td>
+     <td class="izena">B4 Gaizka Alberdi</td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">3</td>
+     <td class="izena">F4 Jose Garrido</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">4</td>
+     <td class="izena">D5 Lander Agirregomezkorta</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">5</td>
+     <td class="izena"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="emaitza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   <tr>
+     <td class="zenbakia">6</td>
+     <td class="izena">F6 Aitor Fernandez</td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza"></td>
+     <td class="emaitza beltza"></td>
+     <td class="puntuak"></td>
+     <td></td>
+   </tr>
+   </table>
   </main>
 
 </body>
