--- a/bukaerak.html
+++ b/bukaerak.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hasierak</title>
+    <title>Bukaerak</title>
     <link rel="stylesheet" href="itxurak/nagusia.css">
   </head>
   <body>
     <header class="burua">
       <h1>Zubi-Ondo kirol elkartea</h1>
-      <h2>Hasierak</h2>
+      <h2>Bukaerak</h2>
       <nav class="menua">
         <a href="index.html">Home</a>
         <a href="berriak.html">Berriak</a>
         <a href="artikuloak.html">Artikuloak</a>
-        <a href="bukaerak.html">Bukaerak</a>
+        <a href="hasierak.html">Hasierak</a>
         <a href="taktika.html">Taktika</a>
       </nav>
     </header>
