--- a/taula2.html
+++ b/taula2.html
@@ -238,7 +238,7 @@
    </tr>
    <tr>
      <td class="zenbakia">4</td>
-     <td class="izena">A5</td>
+     <td class="izena">A5 Vicente Santos</td>
      <td class="emaitza"></td>
      <td class="emaitza"></td>
      <td class="emaitza"></td>
@@ -262,7 +262,7 @@
    </tr>
    <tr>
      <td class="zenbakia">6</td>
-     <td class="izena">C6</td>
+     <td class="izena">C6 Iban Fernandez</td>
      <td class="emaitza"></td>
      <td class="emaitza"></td>
      <td class="emaitza"></td>
