--- a/taula2.html
+++ b/taula2.html
@@ -388,8 +388,8 @@
    </tr>
    <tr>
      <td class="zenbakia">2</td>
-     <td class="izena">A4</td>
-     <td class="emaitza">A4 Sergio Fenandez</td>
+     <td class="izena">A4 Sergio Fernandez</td>
+     <td class="emaitza"></td>
      <td class="emaitza beltza"></td>
      <td class="emaitza"></td>
      <td class="emaitza"></td>
