--- a/taula2.html
+++ b/taula2.html
@@ -511,7 +511,7 @@
    </tr>
    <tr>
      <td class="zenbakia">5</td>
-     <td class="izena">Santi Fernandez</td>
+     <td class="izena">F7 Santi Fernandez</td>
      <td class="emaitza"></td>
      <td class="emaitza"></td>
      <td class="emaitza"></td>
