--- a/taula.html
+++ b/taula.html
@@ -295,10 +295,10 @@
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
 		  <td class="emaitza">0</td>
-		  <td class="puntuak">6</td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">0</td>
+		  <td class="puntuak">9>/td>
 		  <td></td>
 		</tr>
 		<tr>
@@ -308,11 +308,11 @@
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">0</td>
-		  <td class="puntuak">9</td>
+		  <td class="puntuak">15</td>
 		  <td></td>
 		</tr>
 		<tr>
@@ -339,7 +339,7 @@
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
 		  <td class="puntuak">6</td>
 		  <td></td>
 		</tr>
@@ -347,7 +347,7 @@
 		  <td class="zenbakia">5</td>
 		  <td class="izena">Iban Fernandez</td>
 		  <td class="emaitza">0</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
@@ -360,28 +360,28 @@
 		<tr>
 		  <td class="zenbakia">6</td>
 		  <td class="izena">Roberto Kerexeta</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">0</td>
-		  <td class="puntuak">9</td>
+		  <td class="puntuak">12</td>
 		  <td></td>
 		</tr>
 		<tr>
 		  <td class="zenbakia">7</td>
 		  <td class="izena">Zigor Palacios</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza">1</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
 		  <td class="puntuak">1</td>
 		  <td></td>
 		</tr>
@@ -391,12 +391,12 @@
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
-		  <td class="emaitza"></td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
-		  <td class="puntuak">12</td>
+		  <td class="puntuak">18</td>
 		  <td></td>
 		</tr>
 	  </table>
@@ -422,12 +422,12 @@
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">1</td>
-		  <td class="puntuak">16</td>
+		  <td class="puntuak">19</td>
 		  <td></td>
 		</tr>
 		<tr>
@@ -436,12 +436,12 @@
 		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza">0</td>
-		  <td class="puntuak">3</td>
+		  <td class="puntuak">9</td>
 		  <td></td>
 		</tr>
 		<tr>
@@ -451,37 +451,37 @@
 		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">0</td>
 		  <td class="puntuak">9</td>
 		  <td></td>
 		</tr>
 		<tr>
 		  <td class="zenbakia">4</td>
 		  <td class="izena">Iñaki Burunza</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
-		  <td class="puntuak">3</td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">0</td>
+		  <td class="puntuak">6</td>
 		  <td></td>
 		</tr>
 		<tr>
 		  <td class="zenbakia">5</td>
 		  <td class="izena">Lander Aguirregomezkorta</td>
 		  <td class="emaitza">0</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza">0</td>
 		  <td class="puntuak">6</td>
 		  <td></td>
@@ -490,13 +490,13 @@
 		  <td class="zenbakia">6</td>
 		  <td class="izena">Manu Sanchez</td>
 		  <td class="emaitza">0</td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza">0</td>
 		  <td class="emaitza beltza"></td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
+		  <td class="emaitza">0</td>
 		  <td class="puntuak">0</td>
 		  <td></td>
 		</tr>
@@ -506,12 +506,12 @@
 		  <td class="emaitza">0</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">0</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
 		  <td class="emaitza"></td>
-		  <td class="puntuak">3</td>
+		  <td class="puntuak">9</td>
 		  <td></td>
 		</tr>
 		<tr>
@@ -519,15 +519,15 @@
 		  <td class="izena">Anibal Fernandez</td>
 		  <td class="emaitza">1</td>
 		  <td class="emaitza">3</td>
-		  <td class="emaitza"></td>
-		  <td class="emaitza"></td>
 		  <td class="emaitza">3</td>
-	  <td class="emaitza"></td>
-		<td class="emaitza"></td>
-		<td class="emaitza beltza"></td>
-		<td class="puntuak">7</td>
-		<td></td>
-		</tr>
+		  <td class="emaitza">0</td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">3</td>
+		  <td class="emaitza">0</td>
+		  <td class="emaitza beltza"></td>
+		  <td class="puntuak">13</td>
+		  <td></td>
+		  </tr>
   </table>
 
   <table>
@@ -553,10 +553,10 @@
       <td class="emaitza">0</td>
       <td class="emaitza">0</td>
       <td class="emaitza">3</td>
-      <td class="emaitza"></td>
+      <td class="emaitza">3</td>
       <td class="emaitza">1</td>
       <td class="emaitza">0</td>
-      <td class="puntuak">6</td>
+      <td class="puntuak">10</td>
       <td></td>
     </tr>
     <tr>
@@ -564,27 +564,27 @@
       <td class="izena">Hodei Kerexeta</td>
       <td class="emaitza">0</td>
       <td class="emaitza beltza"></td>
-      <td class="emaitza"></td>
       <td class="emaitza">0</td>
-      <td class="emaitza"></td>
+      <td class="emaitza">0</td>
       <td class="emaitza">3</td>
       <td class="emaitza">3</td>
+      <td class="emaitza">3</td>
       <td class="emaitza">0</td>
-      <td class="puntuak">6</td>
+      <td class="puntuak">9</td>
       <td></td>
     </tr>
     <tr>
       <td class="zenbakia">3</td>
       <td class="izena">Juanjo Gomez</td>
       <td class="emaitza">3</td>
-      <td class="emaitza"></td>
+      <td class="emaitza">3</td>
       <td class="emaitza beltza"></td>
-      <td class="emaitza"></td>
       <td class="emaitza">3</td>
       <td class="emaitza">3</td>
       <td class="emaitza">3</td>
-      <td class="emaitza"></td>
-      <td class="puntuak">12</td>
+      <td class="emaitza">3</td>
+      <td class="emaitza">3</td>
+      <td class="puntuak">19</td>
       <td></td>
     </tr>
     <tr>
@@ -592,7 +592,7 @@
       <td class="izena">Patxi Agea</td>
       <td class="emaitza">3</td>
       <td class="emaitza">3</td>
-      <td class="emaitza"></td>
+      <td class="emaitza">0</td>
       <td class="emaitza beltza"></td>
       <td class="emaitza">3</td>
       <td class="emaitza">0</td>
@@ -605,7 +605,7 @@
       <td class="zenbakia">5</td>
       <td class="izena">Iñaki Raigoso</td>
       <td class="emaitza">0</td>
-      <td class="emaitza"></td>
+      <td class="emaitza">0</td>
       <td class="emaitza">0</td>
       <td class="emaitza">0</td>
       <td class="emaitza beltza"></td>
@@ -618,7 +618,7 @@
     <tr>
       <td class="zenbakia">6</td>
       <td class="izena">Paco Egea</td>
-      <td class="emaitza"></td>
+      <td class="emaitza">0</td>
       <td class="emaitza">0</td>
       <td class="emaitza">0</td>
       <td class="emaitza">3</td>
@@ -632,7 +632,7 @@
     <tr>
       <td class="zenbakia">7</td>
       <td class="izena">Gorka Uranga</td>
-      <td class="emaitza"></td>
+      <td class="emaitza">1</td>
       <td class="emaitza">0</td>
       <td class="emaitza">0</td>
       <td class="emaitza">0</td>
@@ -640,7 +640,7 @@
       <td class="emaitza">3</td>
       <td class="emaitza beltza"></td>
       <td class="emaitza">0</td>
-      <td class="puntuak">6</td>
+      <td class="puntuak">2</td>
       <td></td>
     </tr>
 	<tr>
@@ -648,13 +648,13 @@
       <td class="izena">Jabi Muñoz</td>
       <td class="emaitza">3</td>
       <td class="emaitza">3</td>
-      <td class="emaitza"></td>
+      <td class="emaitza">1</td>
       <td class="emaitza">3</td>
       <td class="emaitza">3</td>
       <td class="emaitza">3</td>
       <td class="emaitza">3</td>
       <td class="emaitza beltza"></td>
-      <td class="puntuak">18</td>
+      <td class="puntuak">19</td>
       <td></td>
     </tr>
   </table>
@@ -680,12 +680,12 @@
 			<td class="emaitza beltza"></td>
 			<td class="emaitza">0</td>
 			<td class="emaitza">0</td>
-			<td class="emaitza"></td>
-			<td class="emaitza"></td>
-			<td class="emaitza"></td>
+			<td class="emaitza">3</td>
+			<td class="emaitza">3</td>
 			<td class="emaitza">0</td>
 			<td class="emaitza">0</td>
-			<td class="puntuak">0</td>
+			<td class="emaitza">0</td>
+			<td class="puntuak">6</td>
 			<td></td>
 		</tr>
 		<tr>
@@ -694,12 +694,12 @@
 			<td class="emaitza">3</td>
 			<td class="emaitza beltza"></td>
 			<td class="emaitza">3</td>
-			<td class="emaitza"></td>
+			<td class="emaitza">3</td>
 			<td class="emaitza">0</td>
 			<td class="emaitza">0</td>
 			<td class="emaitza">3</td>
 			<td class="emaitza">0</td>
-			<td class="puntuak">9</td>
+			<td class="puntuak">12</td>
 			<td></td>
 		</tr>
 		<tr>
@@ -708,34 +708,34 @@
 			<td class="emaitza">3</td>
 			<td class="emaitza">0</td>
 			<td class="emaitza beltza"></td>
-			<td class="emaitza"></td>
-			<td class="emaitza"></td>
+			<td class="emaitza">3</td>
+			<td class="emaitza">3</td>
 			<td class="emaitza">3</td>
 			<td class="emaitza">3</td>
 			<td class="emaitza">1</td>
-			<td class="puntuak">10</td>
+			<td class="puntuak">16</td>
 			<td></td>
 		</tr>
 		<tr>
 			<td class="zenbakia">4</td>
 			<td class="izena">Santi Fernandez</td>
-			<td class="emaitza"></td>
-			<td class="emaitza"></td>
-			<td class="emaitza"></td>
+			<td class="emaitza">0</td>
+			<td class="emaitza">0</td>
+			<td class="emaitza">0</td>
 			<td class="emaitza beltza"></td>
 			<td class="emaitza">3</td>
 			<td class="emaitza">0</td>
 			<td class="emaitza">1</td>
-			<td class="emaitza"></td>
+			<td class="emaitza">0</td>
 			<td class="puntuak">4</td>
 			<td></td>
 		</tr>
 		<tr>
 			<td class="zenbakia">5</td>
 			<td class="izena">Miguel Angel Ordoñez</td>
-			<td class="emaitza"></td>
+			<td class="emaitza">0</td>
 			<td class="emaitza">3</td>
-			<td class="emaitza"></td>
+			<td class="emaitza">0</td>
 			<td class="emaitza">0</td>
 			<td class="emaitza beltza"></td>
 			<td class="emaitza">0</td>
@@ -747,15 +747,15 @@
 		<tr>
 			<td class="zenbakia">6</td>
 			<td class="izena">Jose Garcia</td>
-			<td class="emaitza"></td>
+			<td class="emaitza">3</td>
 			<td class="emaitza">3</td>
 			<td class="emaitza">0</td>
 			<td class="emaitza">3</td>
 			<td class="emaitza">3</td>
 			<td class="emaitza beltza"></td>
-			<td class="emaitza"></td>
+			<td class="emaitza">3</td>
 			<td class="emaitza">0</td>
-			<td class="puntuak">9</td>
+			<td class="puntuak">15</td>
 			<td></td>
 		</tr>
 		<tr>
@@ -766,9 +766,9 @@
 			<td class="emaitza">0</td>
 			<td class="emaitza">1</td>
 			<td class="emaitza">3</td>
-			<td class="emaitza"></td>
+			<td class="emaitza">0</td>
 			<td class="emaitza beltza"></td>
-			<td class="emaitza"></td>
+			<td class="emaitza">0</td>
 			<td class="puntuak">7</td>
 			<td></td>
 		</tr>
@@ -778,12 +778,12 @@
 			<td class="emaitza">3</td>
 			<td class="emaitza">3</td>
 			<td class="emaitza">1</td>
-			<td class="emaitza"></td>
 			<td class="emaitza">3</td>
 			<td class="emaitza">3</td>
-			<td class="emaitza"></td>
+			<td class="emaitza">3</td>
+			<td class="emaitza">3</td>
 			<td class="emaitza beltza"></td>
-			<td class="puntuak">13</td>
+			<td class="puntuak">19</td>
 			<td></td>
 		</tr>
 	</table>
