--- a/taula.html
+++ b/taula.html
@@ -298,7 +298,7 @@
 		  <td class="emaitza">0</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">0</td>
-		  <td class="puntuak">9>/td>
+		  <td class="puntuak">9</td>
 		  <td></td>
 		</tr>
 		<tr>
@@ -510,7 +510,7 @@
 		  <td class="emaitza">3</td>
 		  <td class="emaitza">3</td>
 		  <td class="emaitza beltza"></td>
-		  <td class="emaitza"></td>
+		  <td class="emaitza">0</td>
 		  <td class="puntuak">9</td>
 		  <td></td>
 		</tr>
